---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(r#\"[amount, +amount, -amount]\"#, Rule::list).unwrap()"
---
[
    Pair {
        rule: list,
        span: Span {
            str: "[amount, +amount, -amount]",
            start: 0,
            end: 26,
        },
        inner: [
            Pair {
                rule: expr_call,
                span: Span {
                    str: "amount",
                    start: 1,
                    end: 7,
                },
                inner: [
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "amount",
                            start: 1,
                            end: 7,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "amount",
                                    start: 1,
                                    end: 7,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: expr_call,
                span: Span {
                    str: "+amount",
                    start: 9,
                    end: 16,
                },
                inner: [
                    Pair {
                        rule: operator_add,
                        span: Span {
                            str: "+",
                            start: 9,
                            end: 10,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "amount",
                            start: 10,
                            end: 16,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "amount",
                                    start: 10,
                                    end: 16,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: expr_call,
                span: Span {
                    str: "-amount",
                    start: 18,
                    end: 25,
                },
                inner: [
                    Pair {
                        rule: operator_add,
                        span: Span {
                            str: "-",
                            start: 18,
                            end: 19,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "amount",
                            start: 19,
                            end: 25,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "amount",
                                    start: 19,
                                    end: 25,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
